@@ -63,9 +63,8 @@ namespace fostlib {
     template<typename Iterator>
     struct json_embedded_parser : public boost::spirit::qi::grammar<Iterator, json()> {
         using object_pair_t = std::pair<string, json>;
-        using object_array_t = std::vector<object_pair_t>;
 
-        boost::spirit::qi::rule<Iterator, json()> top, atom;
+        boost::spirit::qi::rule<Iterator, json()> top, atom, null, boolean, number;
         boost::spirit::qi::rule<Iterator, object_pair_t()> object_pair;
         boost::spirit::qi::rule<Iterator, json::object_t()> object, object_array;
         boost::spirit::qi::rule<Iterator, json::array_t()> array, array_list;
@@ -76,7 +75,6 @@ namespace fostlib {
         json_embedded_parser()
         : json_embedded_parser::base_type(top) {
             using boost::spirit::qi::_1;
-            using boost::spirit::qi::_2;
             using boost::spirit::qi::_val;
 
             /// A non-capture whitespace parser
@@ -93,14 +91,13 @@ namespace fostlib {
                     >> -array_list >> whitespace >> boost::spirit::qi::lit(']'));
             array_list = top % (whitespace >> boost::spirit::qi::lit(',') >> whitespace);
 
-            atom = boost::spirit::qi::string("null")
-                | boost::spirit::qi::string("false")[_val = json(false)]
-                | boost::spirit::qi::string("true")[_val = json(true)]
-                | real_p[_val = _1]
-                | boost::spirit::qi::int_parser<int64_t>()[_val = _1]
-                | json_string_p[boost::phoenix::bind([](auto &v, auto s) {
-                        v = json(s);
-                    }, _val, _1)];
+            null = boost::spirit::qi::string("null")[_val = json()];
+            boolean = boost::spirit::qi::string("false")[_val = json(false)]
+                | boost::spirit::qi::string("true")[_val = json(true)];
+            number = real_p[_val = _1]
+                | boost::spirit::qi::int_parser<int64_t>()[_val = _1];
+
+            atom = null | boolean | number | json_string_p;
         }
     };
 
